<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SeasonApp</string>
    <string name="drawer_open">Apri</string>
    <string name="drawer_close">Chiudi</string>
    <string name="contattaci">Contattaci per ottenere più informazioni</string>
    <string name="numeroTelefono">3277141242</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="benvenuti_al_season">Benvenuti al Season</string>
    <string name="camere">Le Nostre Camere</string>
    <string name="prenota">Prenota ora</string>
    <string name="singola">Camera Singola</string>
    <string name="desc_singola">Le nostre camere singole sono pensate per garantirvi piacevoli soggiorni sia brevi che lunghi.</string>
    <string name="matrimoniale">Camera Matrimoniale</string>
    <string name="desc_matrimoniale">Comode e accoglienti, luoghi ideali per continuare a rilassarvi. L\’arredamento dai colori caldi conferisce un’atmosfera di relax.</string>
    <string name="family">Camera Family</string>
    <string name="desc_family">Accoglienti e confortevoli sono dedicate a coloro che cercano un alloggio dall\’eccellente rapporto qualita\'-prezzo.</string>
    <string name="inviaMail">Oppure scrivici alla mail:</string>
    <string name="email">info@season.com</string>
    <string name="home">Home</string>
    <string name="notifiche">Notifiche</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="uomo">Uomo</string>
    <string name="rispostaSicurezza">Risposta di sicurezza</string>
    <string name="domandaSicurezza">Domanda di sicurezza</string>
    <string name="donna">Donna</string>
    <string name="dataNascita">Data di nascita</string>
    <string name="emailUtente">Email</string>
    <string name="numero">Numero di telefono</string>
    <string name="recuperoPassword">Non ricordo la Password.</string>
    <string name="recuperaPassword">Recupera la Password</string>
    <string name="recuperoUsername">Non ricordo l\' Username.</string>
    <string name="domandaSicurezzaUtente">%s</string>
    <string name="recuperaUsername">Recupera l\' Username</string>
    <string name="supporto">Supporto</string>
    <string name="profilo">Profilo</string>
    <string name="inserisciOtp">Inserisci OTP</string>
    <string name="otp">OTP</string>
    <string name="continua">Continua</string>
    <string name="benvenuto">Benvenuto, %s</string>
    <string name="bottomBar">bottomBar</string>
    <string name="accedi">Accedi ora</string>
    <string name="nonloggato">Sembrerebbe che non hai effettuato l\'accesso</string>
    <string name="oppure">Oppure</string>
    <string name="registrati">Registrati</string>
    <string name="descrizione_season">Riscopri il lusso piu\' esclusivo al Season Resort di Sharm El Sheikh, in Egitto. Situato su un tratto di spiaggia privata di 1 km, il Season Resort di Sharm El Sheikh è un\'oasi di lusso tra il deserto e la barriera corallina,con sole tutto l\'anno, sistemazioni moderne ed eleganti e
        viste panoramiche sul Mar Rosso. Dotato di 5 piscine scoperte,
        offre 10 esperienze culinarie all\'aperto, un centro benessere acclamato,
        un divertente miniclub Kids For All Seasons e un centro immersioni PADI gestito con esperienza,
        oltre ad una delle migliori barriere coralline della regione e ad una funicolare che vi trasporta dalla cima
        alla spiaggia.</string>
    <string name="le_mie_prenotazioni">LE MIE PRENOTAZIONI</string>
    <string name="modifica_profilo">MODIFICA PROFILO</string>
    <string name="nomeUtenteLoggato">%s</string>
    <string name="cognomeUtenteLoggato">%s</string>
    <string name="dataNascitaUtenteLoggato">%s</string>
    <string name="ristorante">Il Nostro Ristorante</string>
    <string name="sottotitoloRistorante">Lasciati coccolare dai nostri chef</string>
    <string name="descRistorante">Prenota ora il tuo tavolo e vivi la nostra esperienza culinaria.</string>
    <string name="dataPrenRistorante">Data della Prenotazione</string>
    <string name="numero_di_ospiti">Numero di ospiti</string>
    <string name="pranzo">Pranzo</string>
    <string name="cena">Cena</string>
    <string name="i_nostri_servizi">I Nostri Servizi</string>
    <string name="acquista_il_tuo_gympass">Acquista il tuo GymPass</string>
    <string name="data_di_prenotazione_gympass">Data di prenotazione</string>
    <string name="data_di_prenotazione_escursione">Data di prenotazione</string>
    <string name="textEscursione">Scopri Le Bellezze Del Posto</string>
    <string name="descPalestra">Prova la nostra sala Fitness.</string>
    <string name="descEscursione">Visita il complesso della nostra struttura e vivi l\'esperienza delle immersioni PADI.</string>
    <string name="recensioni">Recensioni</string>
    <string name="sottotitolo_recensioni">L\'esperienza dei nostri clienti</string>
    <string name="descRecensioni">Visualizza o lascia una recensione sulla base della tua esperienza nella nostra struttura.</string>
    <string name="recensisci">Recensisci</string>
    <string name="modifica">Modifica</string>
    <string name="i_miei_servizi">I MIEI SERVIZI</string>
    <string name="gestisci_prenotazioni">GESTISCI PRENOTAZIONI</string>
    <string name="messaggioOtp">Il codice di recupero per la password è %s</string>
    <string name="reinserisci_password">Reinserisci Password</string>
    <string name="modifica_password">Modifica Password</string>
    <string name="prova_i_nostri_impianti">Prova i nostri impianti</string>
    <string name="impiantiDesc">Prenota ora i campi di calcio disponibili all\'interno della nostra struttura.</string>
    <string name="ristoranteTitle">Ristorante</string>
    <string name="gympass">GymPass</string>
    <string name="impianto_sportivo">Impianto Sportivo</string>
    <string name="cancella_prenotazione">Cancella</string>
    <string name="id_pren_rist">ID</string>
    <string name="id">ID</string>
    <string name="riepilogo_della_prenotazione">Riepilogo della prenotazione</string>
    <string name="stelle">STELLE</string>
    <string name="id_utente">ID Utente</string>
    <string name="id_prenotazione">ID Prenotazione</string>
    <string name="inserisci_i_posti_auto">Inserisci i posti Auto</string>
    <string name="prezzo_finale">Prezzo Finale</string>
    <string name="conferma_pagamento">Conferma Pagamento</string>
    <string name="necessiti_del_parcheggio">Necessiti del parcheggio?</string>
    <string name="hai_un_codice_sconto">Hai un codice sconto?</string>
    <string name="conferma_codice">Conferma Codice</string>
</resources>