<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeButton"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/notifyButton"
        android:icon="@drawable/baseline_notifications_24"
        android:title="@string/notifiche" />

    <item
        android:title=""/>

    <item
        android:id="@+id/contactsButton"
        android:title="@string/supporto"
        android:icon="@drawable/baseline_contact_support_24" />
    <item
        android:id="@+id/profileButton"
        android:title="@string/profilo"
        android:icon="@drawable/baseline_account_circle_24" />

</menu>

