<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistratiFragment">


    <LinearLayout
        android:id="@+id/registratiLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/registratiText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/registrati"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/inserisciNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="0"
            android:ems="10"
            android:hint="@string/nome"
            android:inputType="text" />

        <EditText
            android:id="@+id/inserisciCognome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="0"
            android:ems="10"
            android:hint="@string/cognome"
            android:inputType="text" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonUomo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/uomo" />

            <RadioButton
                android:id="@+id/radioButtonDonna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/donna" />
        </RadioGroup>

        <EditText
            android:id="@+id/inserisciDataNascita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="0"
            android:ems="10"
            android:hint="@string/dataNascita"
            android:inputType="date"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/inserisciEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="0"
            android:ems="10"
            android:hint="@string/emailUtente"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/inserisciNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="0"
            android:hint="@string/numero"
            android:inputType="phone"
            android:minEms="6" />

        <EditText
            android:id="@+id/inserisciUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="0"
            android:hint="@string/username"
            android:inputType="text"
            android:minEms="6" />

        <EditText
            android:id="@+id/inserisciPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="0"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minEms="6" />

        <Button
            android:id="@+id/buttonRegistrati"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="100dp"
            android:layout_weight="0"
            android:text="@string/registrati" />
        />

    </LinearLayout>
</FrameLayout>