<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profilazione.ModificaProfiloFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/registratiLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageButton
                android:id="@+id/buttonIndietroModifica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/baseline_arrow_back_24" />

            <TextView
                android:id="@+id/modificaProfiloTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/fontcorsivo"
                android:gravity="center_horizontal"
                android:text="@string/modifica_profilo"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="0"
                android:text="@string/nomeUtenteLoggato"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textCognome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="0"
                android:text="@string/cognomeUtenteLoggato"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textDataNascita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="0"
                android:ems="10"
                android:text="@string/dataNascitaUtenteLoggato"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/inserisciEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="0"
                android:ems="10"
                android:hint="@string/emailUtente"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/inserisciNumero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="0"
                android:hint="@string/numero"
                android:inputType="phone"
                android:minEms="6" />

            <EditText
                android:id="@+id/inserisciUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="0"
                android:hint="@string/username"
                android:inputType="text"
                android:minEms="6" />

            <EditText
                android:id="@+id/inserisciPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="0"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minEms="6" />

            <Button
                android:id="@+id/buttonModifica"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="100dp"
                android:layout_marginBottom="70dp"
                android:layout_weight="0"
                android:backgroundTint="@color/dock"
                android:text="@string/modifica" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>