<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RistoranteFragment">

    <LinearLayout
        android:id="@+id/layoutCamere"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/testoRistorante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/fontcorsivo"
            android:gravity="center_horizontal"
            android:text="@string/ristorante"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="normal|bold" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <ScrollView
            android:id="@+id/pageRistorante"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:id="@+id/layoutPaginaRistorante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageRistorante"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginVertical="10dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ristorante" />

                <TextView
                    android:id="@+id/titoloSingola"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fontcorsivo"
                    android:gravity="center_horizontal"
                    android:text="@string/sottotitoloRistorante"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/descRistorante"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/descRistorante" />

                <View
                    android:id="@+id/divider5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <Button
                    android:id="@+id/date_picker_ristorante"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/dock"
                    android:text="@string/dataPrenRistorante"
                    app:icon="@drawable/ic_today" />

                <Button
                    android:id="@+id/ospiti_picker_ristorante"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:backgroundTint="@color/dock"
                    android:text="@string/numero_di_ospiti" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="5dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonPranzo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/pranzo" />

                    <RadioButton
                        android:id="@+id/radioButtonCena"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/cena" />
                </RadioGroup>

                <Button
                    android:id="@+id/buttonPrenotaOra2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/dock"
                    android:text="@string/prenota"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>