<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecuperoUsernameFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/buttonIndietroRecuperoUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/recuperaUsernameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/recuperaUsername"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="0"
            android:ems="10"
            android:hint="@string/emailUtente"
            android:inputType="textEmailAddress"/>

        <TextView
            android:id="@+id/domandaSicurezzaText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:gravity="center_horizontal"
            android:text="@string/domandaSicurezzaUtente"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/rispostaText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="0"
            android:ems="10"
            android:hint="@string/rispostaSicurezza"
            android:inputType="text"/>

        <Button
            android:id="@+id/buttonContinuaRecuperoUs"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="100dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="0"
            android:text="@string/continua" />
    </LinearLayout>

</FrameLayout>